css/main.scss
---
---

body {
  height: 100%;
  line-height: 1.7;
  font-weight: 300;
  font-family: 'Ubuntu', sans-serif;
  letter-spacing: 1px;
  font-size: 16px;
  -webkit-font-smoothing: antialiased;
}

p {
  color: #656565;
}

.title {
  padding: 80px 0 100px 0;
  text-align: center;
  background-color: #e7f2ef;

  img {
    margin-bottom: 9px;
  }

  h1 {
    color: #e04a31;
    margin: 0 0 40px 0;
    font-size: 40px;
    font-weight: 500;

    span {
      border: 4px solid #e04a31;
      border-radius: 5px;
      padding: 10px 30px;
    }
  }

  h2 {
    color: #688f85;
    font-weight: 300;
    line-height: 150%;
    font-size: 24px;
    margin: 80px 0 40px 0;
  }

  h3 {
    margin: 0 0 80px 0;
  }

  h4 {
    font-weight: normal;
    font-size: 16px;
    line-height: 130%;
    margin: 0;
  }

  h3, h4 {
    a {
      color: #e04a31;
    }
  }

  .upcoming {
    .date {
      margin-bottom: 40px;
      background-color: #688f85;
      padding: 5px;
      border-radius: 5px;

      p {
        color: #fff;
        font-size: 14px;

        span {
          display: inline-block;
        }
      }

      h5 {
        font-size: 18px;
        font-weight: bold;
        line-height: 1.2;

        a {
          color: #fff;
          display: block;
          @media (min-width: 768px) { height: 3em;}
        }
      }
    }
  }

  .register-form {
    margin: 20px 0;

    .input-group {
      input.form-control {
        border-color: #688f85;
      }

      .input-group-addon {
        background-color: #688f85;
        border-color: #688f85;

        button {
          color: #fff;
          font-weight: bold;
          background-color: #688f85;
          border: none;

          &:focus {
            outline:0;
          }
        }
      }
    }

    .text-success {
      color: #688f85;
    }

    .text-danger, .text-success {
      display: none;
    }
  }
}

.section {
  padding: 80px 0;

  h3 {
    margin: 0 0 40px 0;
  }
}

a.register {
  display: block;
  font-size: 18px;
  text-align: center;
  font-weight: bold;
  padding: 5px;
  border-radius: 5px;
}

.workshops {
  h3 {
    color: #e04a31;
  }

  a {
    color: #e04a31;
  }

  p {
    font-size: 16px;
  }
}

.beginner {
  background-color: #e7f2ef;

  h3 {
    color: #e04a31;
  }

  .details {
    h5 {
      color: #e04a31;
    }

    a.register {
      background-color: #e04a31;
      color: #fff;
    }
  }
}

.advanced {
  background-color: #e4f7fd;

  &.alternate {
    background-color: #fff;
  }

  h3, h5 {
    color: #1f71b5;
  }

  a.register {
    background-color: #1f71b5;
    color: #fff;
  }
}

.workshop {
  .details {
    margin-top: 40px;
    margin-bottom: 20px;

    h5, h6 {
      font-size: 18px;
      margin-top: 0;
    }

    ul {
      color: #656565;
      margin: 0;
      padding: 0;
      list-style-type: none;

      &.format {
        hr {
          border-top: 1px dotted #656565;
          width: 50%;
        }
      }

      &.topics {
        margin-bottom: 10px;
        margin-left: .8em;

        li:before {
          content: "\f192";
          font-family: FontAwesome;
          display: inline-block;
          margin-left: -1.3em;
          width: 1.3em;
          font-size: 50%;
          vertical-align: middle;
        }
      }
    }

    .date {
      text-align: center;

      p span {
        display: block;
      }
    }
  }
}

.quotes {
  background-color: #e4f7fd;

  p {
    text-align: center;
    font-style: italic;
    margin: 0;
  }
}

.venue {
  h3 {
    color: #e04a31;
  }

  p {
    font-size: 16px;
  }
}

.instructors {
  background-color: #e7f2ef;

  h3 {
    color: #688e85;
    margin-bottom: 60px;
  }

  h4 {
    color: #656565;
    font-size: 18px;
    margin: 40px 0 20px 0;

    .company {
      display: block;
    }
  }

  .profile-link {
    display: block;
    font-size: 80%;

    &:first-child {
      margin: 20px 0 0 0;
    }
  }
}

.tickets {
  padding-bottom: 50px;

  a.register {
    background-color: #e04a31;
    color: #fff;
  }
}

i.simplabs {
  background-repeat: no-repeat;
  background-position: center center;
  background-size: contain;
  filter: gray;
  -webkit-filter: grayscale(1);
  transition: filter ease-in-out .15s, -webkit-filter ease-in-out .15s;
  display: inline-block;
  width: 60px;
  height: 11px;
  background-image: url("/images/simplabs.png");
  background-size: 60px 11px;
}

i:hover {
  filter: none;
  -webkit-filter: none;
}

.footer {
  background-color: #e4f7fd;
  padding: 10px 0;
  font-size: 12px;

  a {
    color: #656565;

    &:hover {
      text-decoration: none;
    }
  }

  #footer-logo {
    margin-top: 0;
    border: none;
  }
}

@media (max-width: 768px) {
  .section {
    h3 {
      margin-bottom: 20px;
    }
  }

  .title {
    h1 {
      font-size: 24px;
    }

    h2 {
      font-size: 20px;
    }
  }

  .instructors {
    a {
      margin-bottom: 20px;
    }
  }
}

